create user functionality done

--- a/src/main/resources/templates/create-user-error.html
+++ b/src/main/resources/templates/create-user-error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Update user details</title>
+    <title>Error creating new user</title>
 </head>
 <body>
-edit user details placeholder
+
 </body>
 </html>
