--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Spring security starter project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="container">
@@ -17,13 +16,19 @@
                  width="400">
         </div>
         <div class="col-sm-2" style="text-align: right">
-            <a href="/login">Zaloguj się</a>
+            <a th:unless="${isAuth}" href="/create-account">Utwórz konto</a>
         </div>
         <div class="col-sm-2">
-            <a href="/create-account">Utwórz konto</a>
+            <a th:if="${isAuth}" th:text="'Wyloguj (' + ${authObject.getName} + ')'" href="/logout">Wyloguj się</a>
+            <a th:unless="${isAuth}" href="/login">Zaloguj się</a>
         </div>
         <div class="col-sm-1">
             <!-- empty placeholder -->
+        </div>
+        <div class="row">
+        <div class="col-5-sm">
+            <span th:text="${test}">asd</span>
+        </div>
         </div>
         <div class="row">
             <div class="col" style="margin-top: 40px">
