user details edit form working

--- a/src/main/resources/templates/applicant-home.html
+++ b/src/main/resources/templates/applicant-home.html
@@ -74,7 +74,7 @@
     <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-3">
-            <a href="/applicant/details" class="btn btn-primary" style="width: 100%">Edytuj dane konta</a>
+            <a href="/user-details" class="btn btn-primary" style="width: 100%">Edytuj dane konta</a>
         </div>
 
         <div class="col-sm-3">
