--- a/src/main/resources/templates/applicant-applications.html
+++ b/src/main/resources/templates/applicant-applications.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Update user details</title>
+    <title>My applications</title>
 </head>
 <body>
-edit user details placeholder
+User submitted applications placeholder
 </body>
 </html>
