--- a/src/main/resources/templates/applicant-home.html
+++ b/src/main/resources/templates/applicant-home.html
@@ -2,7 +2,10 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Applicant homepage</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -74,16 +77,22 @@
     <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-3">
-            <a href="/user-details" class="btn btn-primary" style="width: 100%">Edytuj dane konta</a>
+            <a href="/user-details" class="btn btn-primary" style="width: 100%">Edytuj dane kontaktowe</a>
         </div>
 
         <div class="col-sm-3">
-            <a href="/applicant/user-applications" class="btn btn-primary" style="width: 100%">Wyświetl moje wnioski</a>
+            <a href="/applicant/applications" class="btn btn-primary" style="width: 100%">Wyświetl moje wnioski</a>
         </div>
 
         </div>
         <div class="col-sm-2"></div>
     </div>
 </div>
+
+<!--required by some bootstrap goodness-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
