--- a/src/main/resources/templates/applicant-home.html
+++ b/src/main/resources/templates/applicant-home.html
@@ -74,14 +74,20 @@
         </div>
         <div class="col-sm-2"></div>
     </div>
+
     <div class="row">
         <div class="col-sm-1"></div>
-        <div class="col-sm-3">
-            <a href="/user-details" class="btn btn-primary" style="width: 100%">Edytuj dane kontaktowe</a>
-        </div>
 
         <div class="col-sm-3">
             <a href="/applicant/applications" class="btn btn-primary" style="width: 100%">Wyświetl moje wnioski</a>
+        </div>
+
+        <div class="col-sm-3">
+            <a href="/user/details" class="btn btn-primary" style="width: 100%">Edytuj dane kontaktowe</a>
+        </div>
+
+        <div class="col-sm-3">
+            <a href="/user/email-password" class="btn btn-primary" style="width: 100%">Zmień email/hasło</a>
         </div>
 
         </div>
