--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Create new user</title>
@@ -18,13 +18,14 @@
     <div class="col-sm-3"></div>
 </div>
 <div class="row" style="height: 40px"></div>
-<form action="/create-user" method="post">
+
+<form th:action="@{/create-user}" th:object="${user}" method="post" >
     <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
             <div class="mb-3">
                 <label for="username" class="form-label">Nazwa użytkownika</label>
-                <input type="text" name="username" class="form-control" id="username" required autofocus>
+                <input type="text" name="username" th:field="*{username}" class="form-control" id="username" required autofocus>
             </div>
         </div>
         <div class="col-sm-4"></div>
@@ -34,7 +35,7 @@
         <div class="col-sm-4">
             <div class="mb-3">
                 <label for="email" class="form-label">Adres email</label>
-                <input type="email" name="email" class="form-control" id="email">
+                <input type="email" th:field="*{email}" name="email" class="form-control" id="email">
             </div>
         </div>
         <div class="col-sm-4"></div>
@@ -44,7 +45,7 @@
         <div class="col-sm-4">
             <div class="mb-3">
                 <label for="pass1" class="form-label">Hasło</label>
-                <input type="password" name="pass1" class="form-control" id="pass1" required>
+                <input type="password" th:field="*{password}" name="pass1" class="form-control" id="pass1" required>
             </div>
         </div>
         <div class="col-sm-4"></div>
