--- a/src/main/resources/templates/user-details-form.html
+++ b/src/main/resources/templates/user-details-form.html
@@ -3,33 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit User Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
-<form th:action="@{/user/save-details}" th:object="${userDetails}" method="post">
+<div class="container">
+    <div class="row" style="height: 40px"></div>
+    <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6">
+            <h3 style="text-align: center">Edytuj dane kontaktowe</h3>
+        </div>
+        <div class="col-sm-3"></div>
+    </div>
+    <div class="row" style="height: 40px"></div>
 
-    <input type="hidden" th:field="*{id}">
+    <form th:action="@{/user/save-details}" th:object="${userDetails}" method="post">
 
-    <div>
-        <label>name</label>
-        <input type="text" th:field="*{name}">
-    </div>
-    <div>
-        <label>surname</label>
-        <input type="text" th:field="*{surname}">
-    </div>
-    <div>
-        <label>adress</label>
-        <input type="text" th:field="*{adress}">
-    </div>
-    <div>
-        <label>phone</label>
-        <input type="number" th:field="*{phone}">
-    </div>
-    <div>
-        <input type="submit" value="zapisz">
-    </div>
-    <div><a href="/applicant">powrót</a></div>
-</form>
+        <input type="hidden" th:field="*{id}">
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Imię</label>
+                    <input id="name" type="text" th:field="*{name}" class="form-control">
+                </div>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <div class="mb-3">
+                    <label for="surname" class="form-label">Nazwisko</label>
+                    <input type="text" id="surname" th:field="*{surname}" class="form-control">
+                </div>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <div class="mb-3">
+                    <label for="adress" class="form-label">Adres</label>
+                    <input type="text" id="adress" th:field="*{adress}" class="form-control">
+                </div>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Numer telefonu</label>
+                    <input type="number" id="phone" th:field="*{phone}" class="form-control">
+                </div>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+        <div class="row"></div>
+        <div class="row" style="margin-top: 30px">
+
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3">
+            <a href="/applicant" class="btn btn-light" style="width: 100%">Powrót</a>
+        </div>
+        <div class="col-sm-3">
+            <input type="submit" class="btn btn-primary" style="width: 100%" value="Zapisz">
+        </div>
+        <div class="col-sm-3"></div>
+        </div>
+
+<!--        <div>-->
+<!--            <input type="submit" value="zapisz">-->
+<!--        </div>-->
+<!--        <div><a href="/applicant">powrót</a></div>-->
+    </form>
+</div>
 </body>
 </html>
