--- a/src/main/resources/templates/applicant-applications.html
+++ b/src/main/resources/templates/applicant-applications.html
@@ -3,25 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Złożone wnioski</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+<div class="row" style="margin-top: 40px"></div>
+<div class="row" style="margin-bottom: 40px">
+    <h3 style="text-align: center">
+        Liczba złożonych wniosków: <span th:text="${formList.size()}">liczba</span>
+    </h3>
+</div>
+<div class="table-container">
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8">
+            <table class="table table-striped">
+                <tr>
+                    <th>Lp</th>
+                    <th>Typ zgłoszenia</th>
+                    <th>Data zgłoszenia</th>
+                    <th>Status</th>
+                    <th>Akcja (zobacz/usuń)</th>
+                </tr>
+                <tr th:each="form, status: ${formList}">
+                    <td th:text="${status.count}">1</td>
+                    <td th:text="${form.getFormType()}">rodzaj formularza</td>
+                    <td th:text="${form.getApplicationDateTime()}">12.12.2021T08:30</td>
+                    <td th:text="${form.getFormStatus()}">zaakceptowany</td>
+                    <td>zobacz/usuń</td>
 
-Liczba złożonych wniosków: <span th:text="${formList.size()}">liczba</span>
-<table>
-    <tr>
-        <th>Lp</th>
-        <th>Typ zgłoszenia</th>
-        <th>Data zgłoszenia</th>
-        <th>Status</th>
-        <th>Akcja (zobacz/usuń)</th>
-    </tr>
-    <tr th:each="form, status: ${formList}">
-        <td th:text="${status.count}">1</td>
-        <td th:text="${form.getFormType()}">rodzaj formularza</td>
-        <td th:text="${form.getApplicationDateTime()}">12.12.2021T08:30</td>
-        <td th:text="${form.getFormStatus()}">zaakceptowany</td>
-        <td>zobacz/usuń</td>
-    </tr>
-</table>
+                </tr>
+            </table>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+</div>
+<div class="row" style="margin-top: 40px">
+    <div class="col-sm-8"></div>
+    <div class="col-sm-2">
+        <a href="/applicant" class="btn btn-secondary" style="width: 100%">Powrót</a>
+    </div>
+</div>
 </body>
 </html>
