added entities for rest of forms

--- a/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
+++ b/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
@@ -113,9 +113,9 @@
         <div class="row mb-3">
             <label for="color" class="col-sm-2 col-form-label">Rodzaj balonu</label>
             <div class="col-sm-3">
-                <select name="baloonType" class="form-select" aria-label="Default select example">
-                    <option th:each="baloonType : ${T(io.github.morbidreich.airform.entity.BaloonType).values()}"
-                            th:value="${baloonType}" th:text="${baloonType.displayValue()}"></option>
+                <select name="probingBaloonSize" class="form-select" aria-label="Default select example">
+                    <option th:each="probingBaloonSize : ${T(io.github.morbidreich.airform.entity.ProbingBaloonSize).values()}"
+                            th:value="${probingBaloonSize}" th:text="${probingBaloonSize.displayValue()}"></option>
                 </select>
             </div>
         </div>
