--- a/src/main/resources/templates/create-user-error.html
+++ b/src/main/resources/templates/create-user-error.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Error creating new user</title>
+    <title>Error creating new user - username already exist</title>
+
 </head>
 <body>
-
+<h3>Nazwa użytkownika jest już zajęta!</h3>
 </body>
 </html>
