applicant can now post recreation baloon forms

--- a/src/main/resources/templates/applicant-home.html
+++ b/src/main/resources/templates/applicant-home.html
@@ -64,9 +64,9 @@
                          src="https://i.pinimg.com/originals/e8/4d/9e/e84d9ea01670bf98a1c624611c668e0b.jpg"
                          alt="wniosek - lampiony" height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Lampiony</h5>
-                        <p class="card-text">Jeszcze niedostępne!</p>
-                        <a href="/applicant/lanterns-form" class="btn btn-primary btn-secondary btn-lg disabled" role="button"
+                        <h5 class="card-title">Lampiony, balony</h5>
+<!--                        <p class="card-text">Jeszcze niedostępne!</p>-->
+                        <a href="/applicant/recreation-baloon-form" class="btn btn-primary btn-lg" role="button"
                            aria-disabled="true">Złóż wniosek</a>
                     </div>
                 </div>
