storing images locally

--- a/src/main/resources/templates/applicant-home.html
+++ b/src/main/resources/templates/applicant-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,7 +31,7 @@
             <div class="">
                 <div class="card shadow p-3 mb-5 bg-white rounded">
                     <img class="card-img-top"
-                         src="https://img3.goodfon.com/wallpaper/nbig/6/10/kupol-meteozond-aerostat.jpg"
+                         th:src="@{/images/probing.jpg}"
                          alt="wniosek - sondowanie atmosfery" height="200px">
                     <div class="card-body">
                         <h5 class="card-title">Sondowanie atmosfery</h5>
@@ -45,7 +45,7 @@
             <div class="">
                 <div class="card shadow p-3 mb-5 bg-white rounded">
                     <img class="card-img-top"
-                         src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fpaulmsutter%2Ffiles%2F2019%2F02%2Flightshow-2223124_1920-1200x675.jpg"
+                         th:src="@{/images/lasers.jpg}"
                          alt="wniosek - lasery" height="200px">
                     <div class="card-body">
                         <h5 class="card-title">Pokaz laserów</h5>
@@ -61,7 +61,7 @@
             <div class="">
                 <div class="card shadow p-3 mb-5 bg-white rounded">
                     <img class="card-img-top"
-                         src="https://i.pinimg.com/originals/e8/4d/9e/e84d9ea01670bf98a1c624611c668e0b.jpg"
+                         th:src="@{/images/baloons.jpg}"
                          alt="wniosek - lampiony" height="200px">
                     <div class="card-body">
                         <h5 class="card-title">Lampiony, balony</h5>
