--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>AirForm - formularze ASM made easy</title>
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
         <div class="col-sm-7">
-            <img src="https://www.a6alliance.net/wp-content/uploads/2020/11/logo-bok-sygnatura-www-corel-9.jpg"
+            <img th:src="@{/images/pansa-logo.jpg}"
                  width="400">
         </div>
         <div class="col-sm-2" style="text-align: right">
