--- a/src/main/resources/templates/applicant-applications.html
+++ b/src/main/resources/templates/applicant-applications.html
@@ -23,14 +23,14 @@
                     <th>Typ zgłoszenia</th>
                     <th>Data zgłoszenia</th>
                     <th>Status</th>
-                    <th>Akcja (zobacz/usuń)</th>
+                    <th>Akcja (wyświetl/edytuj/usuń)</th>
                 </tr>
                 <tr th:each="form, status: ${formList}">
                     <td th:text="${status.count}">1</td>
                     <td th:text="${form.getFormType().toString()}">rodzaj formularza</td>
                     <td th:text="${form.getApplicationDateTime()}">12.12.2021T08:30</td>
                     <td th:text="${form.getFormStatus().toString()}">zaakceptowany</td>
-                    <td>zobacz/usuń</td>
+                    <td>zobacz/edytuj/usuń</td>
 
                 </tr>
             </table>
@@ -38,6 +38,8 @@
         <div class="col-sm-2"></div>
     </div>
 </div>
+<b><h4>dodaj mozliwosc edytowania formularza tylko do momentu, zanim zajmie sie nim ktos z asm<br>
+    Sprawdz formStatus. FILED - mozna edytowac, PROCESSING - nie mozna</h4></b>
 <div class="row" style="margin-top: 40px">
     <div class="col-sm-8"></div>
     <div class="col-sm-2">
