--- a/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
+++ b/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
@@ -8,6 +8,24 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles/form-error.css}">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            var text_max = 254;
+            $('#textarea_feedback').html('Zostało znaków: ' + text_max);
+
+            $('#description').keyup(function() {
+                var text_length = $('#description').val().length;
+                var text_remaining = text_max - text_length;
+
+                $('#textarea_feedback').html('Zostało znaków: ' + text_remaining);
+            });
+
+        });
+    </script>
 
 </head>
 <body>
@@ -24,30 +42,40 @@
             <label for="name" class="col-sm-2 col-form-label">Imię i nazwisko</label>
             <div class="col-sm-6">
                 <input th:field="*{name}" type="text" class="form-control" id="name">
+                <p th:errors="*{name}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
         <div class="row mb-3">
             <label for="phone" class="col-sm-2 col-form-label">Numer telefonu</label>
             <div class="col-sm-6">
                 <input type="number" th:field="*{phone}" class="form-control" id="phone">
+                <p th:errors="*{phone}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
         <div class="row mb-3">
             <label for="email" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-6">
                 <input th:field="*{email}" type="email" class="form-control" id="email">
+                <p th:errors="*{email}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
         <div class="row mb-3">
             <label for="mainDateTime" class="col-sm-2 col-form-label">Termin zasadniczy</label>
             <div class="col-sm-6">
                 <input th:field="*{mainDateTime}" type="datetime-local" class="form-control" id="mainDateTime">
+                <p th:errors="*{mainDateTime}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
+
         </div>
         <div class="row mb-3">
             <label for="backupDateTime" class="col-sm-2 col-form-label">Termin zapasowy</label>
             <div class="col-sm-6">
                 <input th:field="*{backupDateTime}" type="datetime-local" class="form-control" id="backupDateTime">
+                <p th:errors="*{backupDateTime}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
 
@@ -55,6 +83,7 @@
             <label for="location" class="col-sm-2 col-form-label">Miejscowość</label>
             <div class="col-sm-6">
                 <input th:field="*{location}" type="text" class="form-control" id="location">
+                <p th:errors="*{location}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -63,14 +92,17 @@
             <div class="col-sm-1">
                 <input th:field="*{latitudeDegrees}" type="number" class="form-control" id="latitude" placeholder="">
                 <div id="latdeghelp" class="form-text">Stopnie</div>
+                <p th:errors="*{latitudeDegrees}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <input th:field="*{latitudeMinutes}" type="number" class="form-control" id="latMin">
                 <div id="latminhelp" class="form-text">Minuty</div>
+                <p th:errors="*{latitudeMinutes}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <input th:field="*{latitudeSeconds}" type="number" class="form-control" id="latSec">
                 <div id="latsechelp" class="form-text">Sekundy</div>
+                <p th:errors="*{latitudeSeconds}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <label class="col-sm-2 col-form-label">N</label>
@@ -81,14 +113,17 @@
             <div class="col-sm-1">
                 <input th:field="*{longitudeDegrees}" type="number" class="form-control" id="longitude" placeholder="">
                 <div id="londeghelp" class="form-text">Stopnie</div>
+                <p th:errors="*{longitudeDegrees}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <input th:field="*{longitudeMinutes}" type="number" class="form-control" id="lonMin">
                 <div id="lonminhelp" class="form-text">Minuty</div>
+                <p th:errors="*{longitudeMinutes}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <input th:field="*{longitudeSeconds}" type="number" class="form-control" id="lonSec">
                 <div id="lonsechelp" class="form-text">Sekundy</div>
+                <p th:errors="*{longitudeSeconds}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <label class="col-sm-2 col-form-label">E</label>
@@ -99,6 +134,7 @@
             <label for="maxHeight" class="col-sm-2 col-form-label">Maksymalna wysokość</label>
             <div class="col-sm-3">
                 <input th:field="*{maxHeight}" type="number" class="form-control" id="maxHeight">
+                <p th:errors="*{maxHeight}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">metrów</div>
         </div>
@@ -107,6 +143,8 @@
             <label for="color" class="col-sm-2 col-form-label">Kolor balonu</label>
             <div class="col-sm-3">
                 <input th:field="*{baloonColor}" type="text" class="form-control" id="color">
+                <p th:errors="*{baloonColor}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
 
@@ -124,6 +162,9 @@
             <label for="description" class="col-sm-2 col-form-label">Opis przedsięwzięcia</label>
             <div class="col-sm-6">
                 <textarea th:field="*{description}" rows="3" class="form-control" id="description"></textarea>
+                <div id="textarea_feedback"></div>
+                <p th:errors="*{description}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
 
@@ -131,13 +172,18 @@
             <div class="col-sm-8">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" th:field="*{rodo}" id="rodo">
+
                     <label class="form-check-label" for="rodo">
                         <span style="color: red">(Wymagane)</span> Oświadczam, że zostałem poinformowany o treści
                         obowiązku informacyjnego wynikającym z
                         art. 13 RODO
                         realizowanego przez PAŻP na stronie: <a
-                            href="http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze">http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze</a>
+                            href="http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze">http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze</a><br>
                     </label>
+                    <p th:errors="*{rodo}" class="form-error">Tu bedzie komunikat z bledem</p>
+
+
+
                 </div>
             </div>
         </div>
