--- a/src/main/resources/templates/asm-forms/recreation-baloon-form.html
+++ b/src/main/resources/templates/asm-forms/recreation-baloon-form.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles/form-error.css}">
 </head>
 <body>
 <div class="container">
@@ -22,30 +23,38 @@
             <label for="name" class="col-sm-2 col-form-label">Imię i nazwisko</label>
             <div class="col-sm-6">
                 <input th:field="*{name}" type="text" class="form-control" id="name">
+                <p th:errors="*{name}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
         <div class="row mb-3">
             <label for="phone" class="col-sm-2 col-form-label">Numer telefonu</label>
             <div class="col-sm-6">
                 <input type="number" th:field="*{phone}" class="form-control" id="phone">
+                <p th:errors="*{phone}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
         <div class="row mb-3">
             <label for="email" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-6">
                 <input th:field="*{email}" type="email" class="form-control" id="email">
+                <p th:errors="*{email}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
         <div class="row mb-3">
             <label for="startDateTime" class="col-sm-2 col-form-label">Data realizacji</label>
             <div class="col-sm-6">
                 <input th:field="*{startDateTime}" type="datetime-local" class="form-control" id="startDateTime">
+                <p th:errors="*{startDateTime}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
         <div class="row mb-3">
             <label for="endDateTime" class="col-sm-2 col-form-label">Data zakończenia</label>
             <div class="col-sm-6">
                 <input th:field="*{endDateTime}" type="datetime-local" class="form-control" id="endDateTime">
+                <p th:errors="*{endDateTime}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
         </div>
 
@@ -54,14 +63,19 @@
             <div class="col-sm-1">
                 <input th:field="*{latitudeDegrees}" type="number" class="form-control" id="latitude" placeholder="">
                 <div id="latdeghelp" class="form-text">Stopnie</div>
+                <p th:errors="*{latitudeDegrees}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
             <div class="col-sm-1">
                 <input th:field="*{latitudeMinutes}" type="number" class="form-control" id="latMin">
                 <div id="latminhelp" class="form-text">Minuty</div>
+                <p th:errors="*{latitudeMinutes}" class="form-error">Tu bedzie komunikat z bledem</p>
+
             </div>
             <div class="col-sm-1">
                 <input th:field="*{latitudeSeconds}" type="number" class="form-control" id="latSec">
                 <div id="latsechelp" class="form-text">Sekundy</div>
+                <p th:errors="*{latitudeSeconds}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <label class="col-sm-2 col-form-label">N</label>
@@ -72,14 +86,17 @@
             <div class="col-sm-1">
                 <input th:field="*{longitudeDegrees}" type="number" class="form-control" id="longitude" placeholder="">
                 <div id="londeghelp" class="form-text">Stopnie</div>
+                <p th:errors="*{longitudeDegrees}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <input th:field="*{longitudeMinutes}" type="number" class="form-control" id="lonMin">
                 <div id="lonminhelp" class="form-text">Minuty</div>
+                <p th:errors="*{longitudeMinutes}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <input th:field="*{longitudeSeconds}" type="number" class="form-control" id="lonSec">
                 <div id="lonsechelp" class="form-text">Sekundy</div>
+                <p th:errors="*{longitudeSeconds}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
                 <label class="col-sm-2 col-form-label">E</label>
@@ -87,9 +104,9 @@
         </div>
 
         <div class="row mb-3">
-            <label for="color" class="col-sm-2 col-form-label">Rodzaj balonów</label>
+            <label for="type" class="col-sm-2 col-form-label">Rodzaj balonów</label>
             <div class="col-sm-3">
-                <select name="recreationBaloonType" class="form-select" aria-label="Default select example">
+                <select id="type" name="recreationBaloonType" class="form-select" aria-label="Default select example">
                     <option th:each="recreationBaloonType : ${T(io.github.morbidreich.airform.entity.enums.RecreationBaloonType).values()}"
                             th:value="${recreationBaloonType}" th:text="${recreationBaloonType.displayValue()}"></option>
                 </select>
@@ -100,6 +117,7 @@
             <label for="color" class="col-sm-2 col-form-label">Kolor balonów</label>
             <div class="col-sm-3">
                 <input th:field="*{color}" type="text" class="form-control" id="color">
+                <p th:errors="*{color}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -107,6 +125,7 @@
             <label for="diameter" class="col-sm-2 col-form-label">Średnica (cm)</label>
             <div class="col-sm-3">
                 <input th:field="*{diameter}" type="number" class="form-control" id="diameter">
+                <p th:errors="*{diameter}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -114,6 +133,7 @@
             <label for="baloonCount" class="col-sm-2 col-form-label">Ilość (szt)</label>
             <div class="col-sm-3">
                 <input th:field="*{baloonCount}" type="number" class="form-control" id="baloonCount">
+                <p th:errors="*{baloonCount}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -121,6 +141,7 @@
             <label for="ventureName" class="col-sm-2 col-form-label">Nazwa przedsięwzięcia</label>
             <div class="col-sm-6">
                 <input th:field="*{ventureName}" type="text" class="form-control" id="ventureName">
+                <p th:errors="*{ventureName}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -128,6 +149,7 @@
             <label for="ventureOrganiserName" class="col-sm-2 col-form-label">Nazwisko wykonawcy</label>
             <div class="col-sm-3">
                 <input th:field="*{ventureOrganiserName}" type="text" class="form-control" id="ventureOrganiserName">
+                <p th:errors="*{ventureOrganiserName}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -135,6 +157,7 @@
             <label for="ventureOrganiserPhone" class="col-sm-2 col-form-label">Telefon wykonawcy</label>
             <div class="col-sm-3">
                 <input th:field="*{ventureOrganiserPhone}" type="text" class="form-control" id="ventureOrganiserPhone">
+                <p th:errors="*{ventureOrganiserPhone}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
 
@@ -149,6 +172,7 @@
                         realizowanego przez PAŻP na stronie: <a
                             href="http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze">http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze</a>
                     </label>
+                    <p th:errors="*{rodo}" class="form-error">Tu bedzie komunikat z bledem</p>
                 </div>
             </div>
         </div>
