updated form rodo links behaviour

--- a/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
+++ b/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
@@ -177,7 +177,7 @@
                         <span style="color: red">(Wymagane)</span> Oświadczam, że zostałem poinformowany o treści
                         obowiązku informacyjnego wynikającym z
                         art. 13 RODO
-                        realizowanego przez PAŻP na stronie: <a
+                        realizowanego przez PAŻP na stronie: <a target="_blank" rel="noopener noreferrer"
                             href="http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze">http://www.pansa.pl/index.php?menu_lewe=ops&lang=_pl&opis=OPS/ops_formularze</a><br>
                     </label>
                     <p th:errors="*{rodo}" class="form-error">Tu bedzie komunikat z bledem</p>
