--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-sm-7">
             <img th:src="@{/images/pansa-logo.jpg}"
-                 width="400">
+                 height="70px">
         </div>
         <div class="col-sm-2" style="text-align: right">
             <a th:unless="${isAuth}" href="/create-account">Utwórz konto</a>
