--- a/src/main/resources/templates/applicant-applications.html
+++ b/src/main/resources/templates/applicant-applications.html
@@ -28,7 +28,7 @@
                 <tr th:each="form, status: ${formList}">
                     <td th:text="${status.count}">1</td>
                     <td th:text="${form.getFormType().toString()}">rodzaj formularza</td>
-                    <td th:text="${form.getApplicationDateTime()}">12.12.2021T08:30</td>
+                    <td th:text="${#temporals.format(form.getApplicationDateTime(), 'dd-MMM-yyy HH:mm')}">12.12.2021T08:30</td>
                     <td th:text="${form.getFormStatus().toString()}">zaakceptowany</td>
                     <td>zobacz/edytuj/usuń</td>
 
